Update lists at 20250719-2101

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -123,7 +123,6 @@ allow 2407:3640:2207:8882::1;
 allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
-allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
@@ -171,13 +170,11 @@ allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
 allow 2605:6400:30:f0ed:9151:66ed:6366:5c74;
-allow 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 allow 2605:6400:30:f503::1;
 allow 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
 allow 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
 allow 2605:6400:30:f753:891d:ee77:e97c:741a;
-allow 2605:6400:30:f77f:f41c:2bce:7d61:210b;
 allow 2605:6400:30:f77f:f41c:2bce:7d61:2e06;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
@@ -434,6 +431,7 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
+allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -448,6 +446,7 @@ allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:6301:0:4f3:c39b:cae7:2893:78d3;
+allow 2a0a:20c0:dc01:3::7fa4;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:f4c0:16c:10::1;
@@ -594,6 +593,21 @@ allow 2a0c:e300:b:b::b;
 allow 2a0d:8140:1fff:2a21::1;
 allow 2a0d:8140:1fff:2c04::1;
 allow 2a0d:8140:1fff:c510::1;
+allow 2a0d:bbc7::f816:3eff:fe0b:181b;
+allow 2a0d:bbc7::f816:3eff:fe0b:58d3;
+allow 2a0d:bbc7::f816:3eff:fe12:1851;
+allow 2a0d:bbc7::f816:3eff:fe18:f410;
+allow 2a0d:bbc7::f816:3eff:fe1c:869a;
+allow 2a0d:bbc7::f816:3eff:fe5d:4413;
+allow 2a0d:bbc7::f816:3eff:fe65:992f;
+allow 2a0d:bbc7::f816:3eff:fe72:95b6;
+allow 2a0d:bbc7::f816:3eff:fe77:3729;
+allow 2a0d:bbc7::f816:3eff:fe83:fa45;
+allow 2a0d:bbc7::f816:3eff:fe84:8a9e;
+allow 2a0d:bbc7::f816:3eff:fec7:9bc8;
+allow 2a0d:bbc7::f816:3eff:fee6:ca14;
+allow 2a0d:bbc7::f816:3eff:fee9:3e45;
+allow 2a0d:bbc7::f816:3eff:fef2:6521;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
