--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -41,7 +41,6 @@ allow 104.192.3.74;
 allow 104.219.236.100;
 allow 104.244.73.136;
 allow 104.244.74.229;
-allow 104.244.74.23;
 allow 104.244.74.97;
 allow 104.244.76.237;
 allow 104.244.77.208;
@@ -58,13 +57,11 @@ allow 107.189.1.228;
 allow 107.189.12.3;
 allow 107.189.12.7;
 allow 107.189.12.88;
-allow 107.189.13.180;
 allow 107.189.13.251;
 allow 107.189.13.253;
 allow 107.189.13.254;
 allow 107.189.13.91;
 allow 107.189.1.9;
-allow 107.189.29.103;
 allow 107.189.29.184;
 allow 107.189.30.236;
 allow 107.189.30.49;
@@ -75,7 +72,6 @@ allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
-allow 107.189.7.144;
 allow 107.189.7.168;
 allow 107.189.8.136;
 allow 107.189.8.5;
@@ -198,7 +194,6 @@ allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.255.198.243;
 allow 176.118.193.33;
-allow 176.121.81.51;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.58.89.182;
@@ -210,6 +205,7 @@ allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
+allow 177.149.128.34;
 allow 177.153.51.238;
 allow 177.93.140.66;
 allow 178.162.175.5;
@@ -247,6 +243,7 @@ allow 185.100.87.166;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
+allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -282,7 +279,9 @@ allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
 allow 185.183.159.40;
+allow 185.183.192.147;
 allow 185.191.204.254;
+allow 185.191.239.172;
 allow 185.193.52.180;
 allow 185.195.71.244;
 allow 185.207.107.130;
@@ -943,7 +942,6 @@ allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.93;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
-allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
@@ -991,13 +989,11 @@ allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
 allow 2605:6400:30:f0ed:9151:66ed:6366:5c74;
-allow 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 allow 2605:6400:30:f503::1;
 allow 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
 allow 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
 allow 2605:6400:30:f753:891d:ee77:e97c:741a;
-allow 2605:6400:30:f77f:f41c:2bce:7d61:210b;
 allow 2605:6400:30:f77f:f41c:2bce:7d61:2e06;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
@@ -1255,6 +1251,7 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
+allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1269,6 +1266,7 @@ allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:6301:0:4f3:c39b:cae7:2893:78d3;
+allow 2a0a:20c0:dc01:3::7fa4;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:f4c0:16c:10::1;
@@ -1415,6 +1413,21 @@ allow 2a0c:e300:b:b::b;
 allow 2a0d:8140:1fff:2a21::1;
 allow 2a0d:8140:1fff:2c04::1;
 allow 2a0d:8140:1fff:c510::1;
+allow 2a0d:bbc7::f816:3eff:fe0b:181b;
+allow 2a0d:bbc7::f816:3eff:fe0b:58d3;
+allow 2a0d:bbc7::f816:3eff:fe12:1851;
+allow 2a0d:bbc7::f816:3eff:fe18:f410;
+allow 2a0d:bbc7::f816:3eff:fe1c:869a;
+allow 2a0d:bbc7::f816:3eff:fe5d:4413;
+allow 2a0d:bbc7::f816:3eff:fe65:992f;
+allow 2a0d:bbc7::f816:3eff:fe72:95b6;
+allow 2a0d:bbc7::f816:3eff:fe77:3729;
+allow 2a0d:bbc7::f816:3eff:fe83:fa45;
+allow 2a0d:bbc7::f816:3eff:fe84:8a9e;
+allow 2a0d:bbc7::f816:3eff:fec7:9bc8;
+allow 2a0d:bbc7::f816:3eff:fee6:ca14;
+allow 2a0d:bbc7::f816:3eff:fee9:3e45;
+allow 2a0d:bbc7::f816:3eff:fef2:6521;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1752,7 +1765,6 @@ allow 66.78.40.182;
 allow 66.94.111.228;
 allow 67.219.109.141;
 allow 71.19.144.106;
-allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 72.5.43.62;
@@ -1783,6 +1795,7 @@ allow 82.221.139.190;
 allow 83.147.17.190;
 allow 83.217.9.73;
 allow 83.228.94.69;
+allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
@@ -1833,7 +1846,6 @@ allow 91.219.236.91;
 allow 91.219.237.39;
 allow 91.92.109.126;
 allow 91.92.109.43;
-allow 92.113.144.149;
 allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.113.25.239;
