--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -41,7 +41,6 @@ deny 104.192.3.74;
 deny 104.219.236.100;
 deny 104.244.73.136;
 deny 104.244.74.229;
-deny 104.244.74.23;
 deny 104.244.74.97;
 deny 104.244.76.237;
 deny 104.244.77.208;
@@ -58,13 +57,11 @@ deny 107.189.1.228;
 deny 107.189.12.3;
 deny 107.189.12.7;
 deny 107.189.12.88;
-deny 107.189.13.180;
 deny 107.189.13.251;
 deny 107.189.13.253;
 deny 107.189.13.254;
 deny 107.189.13.91;
 deny 107.189.1.9;
-deny 107.189.29.103;
 deny 107.189.29.184;
 deny 107.189.30.236;
 deny 107.189.30.49;
@@ -75,7 +72,6 @@ deny 107.189.5.249;
 deny 107.189.5.7;
 deny 107.189.6.124;
 deny 107.189.7.141;
-deny 107.189.7.144;
 deny 107.189.7.168;
 deny 107.189.8.136;
 deny 107.189.8.5;
@@ -198,7 +194,6 @@ deny 173.0.3.111;
 deny 173.237.206.68;
 deny 173.255.198.243;
 deny 176.118.193.33;
-deny 176.121.81.51;
 deny 176.58.100.98;
 deny 176.58.121.177;
 deny 176.58.89.182;
@@ -210,6 +205,7 @@ deny 176.65.149.87;
 deny 176.65.149.88;
 deny 176.65.149.96;
 deny 176.97.114.202;
+deny 177.149.128.34;
 deny 177.153.51.238;
 deny 177.93.140.66;
 deny 178.162.175.5;
@@ -247,6 +243,7 @@ deny 185.100.87.166;
 deny 185.100.87.174;
 deny 185.100.87.41;
 deny 185.10.16.41;
+deny 185.104.120.10;
 deny 185.104.120.30;
 deny 185.104.120.40;
 deny 185.106.102.102;
@@ -282,7 +279,9 @@ deny 185.165.171.84;
 deny 185.170.114.25;
 deny 185.183.157.214;
 deny 185.183.159.40;
+deny 185.183.192.147;
 deny 185.191.204.254;
+deny 185.191.239.172;
 deny 185.193.52.180;
 deny 185.195.71.244;
 deny 185.207.107.130;
@@ -943,7 +942,6 @@ deny 2.58.56.35;
 deny 2.58.56.43;
 deny 2.58.56.93;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
-deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c04::f03c:95ff:fe41:d42c;
@@ -991,13 +989,11 @@ deny 2605:6400:30:f04d:2605:6400:30:30;
 deny 2605:6400:30:f060:be62:b857:b818:9144;
 deny 2605:6400:30:f08c:45b7:4a99:a154:694e;
 deny 2605:6400:30:f0ed:9151:66ed:6366:5c74;
-deny 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 deny 2605:6400:30:f503::1;
 deny 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
 deny 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 deny 2605:6400:30:f623:5a78:29a6:8492:27b0;
 deny 2605:6400:30:f753:891d:ee77:e97c:741a;
-deny 2605:6400:30:f77f:f41c:2bce:7d61:210b;
 deny 2605:6400:30:f77f:f41c:2bce:7d61:2e06;
 deny 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 deny 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
@@ -1255,6 +1251,7 @@ deny 2a06:1700:2:148::8493:bcd8;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
+deny 2a06:3000::10;
 deny 2a06:3000::30;
 deny 2a06:3000::40;
 deny 2a06:d380:0:103::62;
@@ -1269,6 +1266,7 @@ deny 2a09:61c0::21;
 deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a09:6301:0:4f3:c39b:cae7:2893:78d3;
+deny 2a0a:20c0:dc01:3::7fa4;
 deny 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:f4c0:16c:10::1;
@@ -1415,6 +1413,21 @@ deny 2a0c:e300:b:b::b;
 deny 2a0d:8140:1fff:2a21::1;
 deny 2a0d:8140:1fff:2c04::1;
 deny 2a0d:8140:1fff:c510::1;
+deny 2a0d:bbc7::f816:3eff:fe0b:181b;
+deny 2a0d:bbc7::f816:3eff:fe0b:58d3;
+deny 2a0d:bbc7::f816:3eff:fe12:1851;
+deny 2a0d:bbc7::f816:3eff:fe18:f410;
+deny 2a0d:bbc7::f816:3eff:fe1c:869a;
+deny 2a0d:bbc7::f816:3eff:fe5d:4413;
+deny 2a0d:bbc7::f816:3eff:fe65:992f;
+deny 2a0d:bbc7::f816:3eff:fe72:95b6;
+deny 2a0d:bbc7::f816:3eff:fe77:3729;
+deny 2a0d:bbc7::f816:3eff:fe83:fa45;
+deny 2a0d:bbc7::f816:3eff:fe84:8a9e;
+deny 2a0d:bbc7::f816:3eff:fec7:9bc8;
+deny 2a0d:bbc7::f816:3eff:fee6:ca14;
+deny 2a0d:bbc7::f816:3eff:fee9:3e45;
+deny 2a0d:bbc7::f816:3eff:fef2:6521;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1752,7 +1765,6 @@ deny 66.78.40.182;
 deny 66.94.111.228;
 deny 67.219.109.141;
 deny 71.19.144.106;
-deny 72.14.179.10;
 deny 72.211.49.235;
 deny 72.235.129.116;
 deny 72.5.43.62;
@@ -1783,6 +1795,7 @@ deny 82.221.139.190;
 deny 83.147.17.190;
 deny 83.217.9.73;
 deny 83.228.94.69;
+deny 83.96.213.63;
 deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.19.182.20;
@@ -1833,7 +1846,6 @@ deny 91.219.236.91;
 deny 91.219.237.39;
 deny 91.92.109.126;
 deny 91.92.109.43;
-deny 92.113.144.149;
 deny 92.243.24.163;
 deny 92.246.84.133;
 deny 93.113.25.239;
