--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -42,7 +42,6 @@ set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.244.73.136;
 set_real_ip_from 104.244.74.229;
 set_real_ip_from 104.244.74.97;
-set_real_ip_from 104.244.76.237;
 set_real_ip_from 104.244.77.208;
 set_real_ip_from 104.244.78.162;
 set_real_ip_from 104.244.78.232;
@@ -50,10 +49,8 @@ set_real_ip_from 104.244.79.50;
 set_real_ip_from 104.254.90.195;
 set_real_ip_from 107.174.146.25;
 set_real_ip_from 107.189.10.175;
-set_real_ip_from 107.189.1.111;
 set_real_ip_from 107.189.1.160;
 set_real_ip_from 107.189.1.175;
-set_real_ip_from 107.189.1.228;
 set_real_ip_from 107.189.12.3;
 set_real_ip_from 107.189.12.7;
 set_real_ip_from 107.189.12.88;
@@ -68,7 +65,6 @@ set_real_ip_from 107.189.30.49;
 set_real_ip_from 107.189.3.11;
 set_real_ip_from 107.189.31.33;
 set_real_ip_from 107.189.5.188;
-set_real_ip_from 107.189.5.249;
 set_real_ip_from 107.189.5.7;
 set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.7.141;
@@ -279,7 +275,6 @@ set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.183.157.214;
 set_real_ip_from 185.183.159.40;
-set_real_ip_from 185.183.192.147;
 set_real_ip_from 185.191.204.254;
 set_real_ip_from 185.191.239.172;
 set_real_ip_from 185.193.52.180;
@@ -942,6 +937,7 @@ set_real_ip_from 2.58.56.35;
 set_real_ip_from 2.58.56.43;
 set_real_ip_from 2.58.56.93;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
+set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
 set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
@@ -985,8 +981,6 @@ set_real_ip_from 2605:6400:30:ebb6:532:acc:65:31;
 set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
-set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
-set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
 set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
 set_real_ip_from 2605:6400:30:f503::1;
@@ -994,7 +988,6 @@ set_real_ip_from 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
 set_real_ip_from 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 set_real_ip_from 2605:6400:30:f623:5a78:29a6:8492:27b0;
 set_real_ip_from 2605:6400:30:f753:891d:ee77:e97c:741a;
-set_real_ip_from 2605:6400:30:f77f:f41c:2bce:7d61:2e06;
 set_real_ip_from 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 set_real_ip_from 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
@@ -1266,7 +1259,6 @@ set_real_ip_from 2a09:61c0::21;
 set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a09:6301:0:4f3:c39b:cae7:2893:78d3;
-set_real_ip_from 2a0a:20c0:dc01:3::7fa4;
 set_real_ip_from 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
@@ -1765,6 +1757,7 @@ set_real_ip_from 66.78.40.182;
 set_real_ip_from 66.94.111.228;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
+set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
 set_real_ip_from 72.235.129.116;
 set_real_ip_from 72.5.43.62;
@@ -1804,7 +1797,6 @@ set_real_ip_from 84.239.46.144;
 set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 85.93.31.31;
-set_real_ip_from 86.54.25.3;
 set_real_ip_from 86.54.28.49;
 set_real_ip_from 87.118.110.27;
 set_real_ip_from 87.118.116.103;
