--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -123,6 +123,7 @@ set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2407:3640:2259:6302::1;
 set_real_ip_from 2407:3641:2259:8208::1;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
+set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
 set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
@@ -166,8 +167,6 @@ set_real_ip_from 2605:6400:30:ebb6:532:acc:65:31;
 set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
-set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
-set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
 set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
 set_real_ip_from 2605:6400:30:f503::1;
@@ -175,7 +174,6 @@ set_real_ip_from 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
 set_real_ip_from 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 set_real_ip_from 2605:6400:30:f623:5a78:29a6:8492:27b0;
 set_real_ip_from 2605:6400:30:f753:891d:ee77:e97c:741a;
-set_real_ip_from 2605:6400:30:f77f:f41c:2bce:7d61:2e06;
 set_real_ip_from 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 set_real_ip_from 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
@@ -446,7 +444,6 @@ set_real_ip_from 2a09:61c0::21;
 set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a09:6301:0:4f3:c39b:cae7:2893:78d3;
-set_real_ip_from 2a0a:20c0:dc01:3::7fa4;
 set_real_ip_from 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
