--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -39,10 +39,8 @@ set_real_ip_from 104.167.242.117;
 set_real_ip_from 104.167.242.118;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.236.100;
-set_real_ip_from 104.244.73.136;
 set_real_ip_from 104.244.74.229;
 set_real_ip_from 104.244.74.97;
-set_real_ip_from 104.244.77.208;
 set_real_ip_from 104.244.78.162;
 set_real_ip_from 104.244.78.232;
 set_real_ip_from 104.244.79.50;
@@ -55,7 +53,6 @@ set_real_ip_from 107.189.12.3;
 set_real_ip_from 107.189.12.7;
 set_real_ip_from 107.189.12.88;
 set_real_ip_from 107.189.13.251;
-set_real_ip_from 107.189.13.253;
 set_real_ip_from 107.189.13.254;
 set_real_ip_from 107.189.13.91;
 set_real_ip_from 107.189.1.9;
@@ -65,7 +62,6 @@ set_real_ip_from 107.189.30.49;
 set_real_ip_from 107.189.3.11;
 set_real_ip_from 107.189.31.33;
 set_real_ip_from 107.189.5.188;
-set_real_ip_from 107.189.5.7;
 set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.7.141;
 set_real_ip_from 107.189.7.168;
@@ -275,6 +271,7 @@ set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.183.157.214;
 set_real_ip_from 185.183.159.40;
+set_real_ip_from 185.183.192.147;
 set_real_ip_from 185.191.204.254;
 set_real_ip_from 185.191.239.172;
 set_real_ip_from 185.193.52.180;
@@ -659,7 +656,6 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:6;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
-set_real_ip_from 2001:67c:e28:1::2;
 set_real_ip_from 2001:67c:e28:1::3;
 set_real_ip_from 2001:67c:e28:1::4;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:173;
@@ -979,16 +975,12 @@ set_real_ip_from 2605:6400:20:ff9::1;
 set_real_ip_from 2605:6400:30:eb71:51b7:4869:7579:3aa1;
 set_real_ip_from 2605:6400:30:ebb6:532:acc:65:31;
 set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
-set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
 set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
-set_real_ip_from 2605:6400:30:f503::1;
-set_real_ip_from 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
 set_real_ip_from 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 set_real_ip_from 2605:6400:30:f623:5a78:29a6:8492:27b0;
 set_real_ip_from 2605:6400:30:f753:891d:ee77:e97c:741a;
-set_real_ip_from 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 set_real_ip_from 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 set_real_ip_from 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
@@ -1217,6 +1209,7 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1444,6 +1437,7 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
+set_real_ip_from 2a0e:97c0:3e3:b6::1;
 set_real_ip_from 2a0e:97c0:3ea:882::1;
 set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
@@ -1708,6 +1702,7 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1747,7 +1742,6 @@ set_real_ip_from 5.8.18.99;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.84.146;
 set_real_ip_from 62.72.47.105;
-set_real_ip_from 64.190.76.2;
 set_real_ip_from 64.190.76.3;
 set_real_ip_from 64.190.76.4;
 set_real_ip_from 65.38.121.230;
@@ -1797,6 +1791,7 @@ set_real_ip_from 84.239.46.144;
 set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 85.93.31.31;
+set_real_ip_from 86.54.25.3;
 set_real_ip_from 86.54.28.49;
 set_real_ip_from 87.118.110.27;
 set_real_ip_from 87.118.116.103;
