--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -63,6 +63,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:6;
 allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
+allow 2001:67c:e28:1::2;
 allow 2001:67c:e28:1::3;
 allow 2001:67c:e28:1::4;
 allow 2001:67c:e60:c0c:192:42:116:173;
@@ -169,9 +170,7 @@ allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
 allow 2605:6400:30:f0ed:9151:66ed:6366:5c74;
 allow 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
-allow 2605:6400:30:f753:891d:ee77:e97c:741a;
 allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
-allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 allow 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:40:fe09::2;
@@ -439,7 +438,6 @@ allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
-allow 2a09:6301:0:4f3:c39b:cae7:2893:78d3;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:f4c0:16c:10::1;
