--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -40,13 +40,11 @@ set_real_ip_from 104.167.242.118;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.244.74.229;
-set_real_ip_from 104.244.74.97;
 set_real_ip_from 104.244.78.162;
 set_real_ip_from 104.244.78.232;
 set_real_ip_from 104.244.79.50;
 set_real_ip_from 104.254.90.195;
 set_real_ip_from 107.174.146.25;
-set_real_ip_from 107.189.10.175;
 set_real_ip_from 107.189.1.160;
 set_real_ip_from 107.189.1.175;
 set_real_ip_from 107.189.12.3;
@@ -64,7 +62,6 @@ set_real_ip_from 107.189.31.33;
 set_real_ip_from 107.189.5.188;
 set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.7.141;
-set_real_ip_from 107.189.7.168;
 set_real_ip_from 107.189.8.136;
 set_real_ip_from 107.189.8.5;
 set_real_ip_from 107.189.8.56;
@@ -405,7 +402,6 @@ set_real_ip_from 185.225.69.203;
 set_real_ip_from 185.225.69.232;
 set_real_ip_from 185.227.134.106;
 set_real_ip_from 185.227.68.78;
-set_real_ip_from 185.230.162.134;
 set_real_ip_from 185.231.102.51;
 set_real_ip_from 185.233.100.23;
 set_real_ip_from 185.235.146.29;
@@ -656,6 +652,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:6;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
+set_real_ip_from 2001:67c:e28:1::2;
 set_real_ip_from 2001:67c:e28:1::3;
 set_real_ip_from 2001:67c:e28:1::4;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:173;
@@ -837,6 +834,8 @@ set_real_ip_from 212.69.167.80;
 set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
 set_real_ip_from 216.239.90.19;
+set_real_ip_from 216.73.159.101;
+set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
 set_real_ip_from 217.199.199.250;
 set_real_ip_from 220.135.36.173;
@@ -980,9 +979,7 @@ set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
 set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
 set_real_ip_from 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 set_real_ip_from 2605:6400:30:f623:5a78:29a6:8492:27b0;
-set_real_ip_from 2605:6400:30:f753:891d:ee77:e97c:741a;
 set_real_ip_from 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
-set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 set_real_ip_from 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
 set_real_ip_from 2605:6400:40:fe09::2;
@@ -1251,7 +1248,6 @@ set_real_ip_from 2a09:61c0::20;
 set_real_ip_from 2a09:61c0::21;
 set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
-set_real_ip_from 2a09:6301:0:4f3:c39b:cae7:2893:78d3;
 set_real_ip_from 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
@@ -1687,7 +1683,6 @@ set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 46.250.243.29;
 set_real_ip_from 46.253.4.208;
-set_real_ip_from 46.30.188.218;
 set_real_ip_from 46.38.243.210;
 set_real_ip_from 46.8.43.110;
 set_real_ip_from 5.101.82.22;
@@ -1742,6 +1737,7 @@ set_real_ip_from 5.8.18.99;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.84.146;
 set_real_ip_from 62.72.47.105;
+set_real_ip_from 64.190.76.2;
 set_real_ip_from 64.190.76.3;
 set_real_ip_from 64.190.76.4;
 set_real_ip_from 65.38.121.230;
@@ -1778,6 +1774,7 @@ set_real_ip_from 82.153.138.241;
 set_real_ip_from 82.153.138.7;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
+set_real_ip_from 82.221.131.86;
 set_real_ip_from 82.221.139.190;
 set_real_ip_from 83.147.17.190;
 set_real_ip_from 83.217.9.73;
