--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -118,7 +118,6 @@ deny 139.99.8.57;
 deny 141.98.11.62;
 deny 144.126.133.74;
 deny 144.208.79.169;
-deny 146.19.254.157;
 deny 146.59.126.232;
 deny 146.59.231.4;
 deny 147.45.116.145;
@@ -230,7 +229,6 @@ deny 185.100.87.166;
 deny 185.100.87.174;
 deny 185.100.87.41;
 deny 185.10.16.41;
-deny 185.104.120.10;
 deny 185.104.120.30;
 deny 185.104.120.40;
 deny 185.106.102.102;
@@ -1230,7 +1228,6 @@ deny 2a06:1700:2:148::8493:bcd8;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
-deny 2a06:3000::10;
 deny 2a06:3000::30;
 deny 2a06:3000::40;
 deny 2a06:d380:0:103::62;
@@ -1431,6 +1428,7 @@ deny 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 deny 2a0e:97c0:3e3:a0e::1;
 deny 2a0e:97c0:3e3:b6::1;
 deny 2a0e:97c0:3ea:882::1;
+deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
@@ -1833,6 +1831,7 @@ deny 93.113.25.239;
 deny 93.123.109.116;
 deny 93.123.12.112;
 deny 93.185.165.211;
+deny 93.90.74.28;
 deny 93.90.74.29;
 deny 93.95.227.37;
 deny 93.95.228.125;
