--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -230,7 +230,6 @@ allow 185.100.87.166;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
-allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -1126,7 +1125,6 @@ allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
-allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1142,6 +1140,7 @@ allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a00:fbe4:1ab:ffff::133;
 allow 2a01:270:9847::1;
+allow 2a01:5e0:36:c311::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
@@ -1225,7 +1224,6 @@ allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1663,7 +1661,6 @@ allow 45.9.148.50;
 allow 45.9.156.101;
 allow 45.9.168.18;
 allow 45.9.168.192;
-allow 45.9.168.70;
 allow 45.94.31.68;
 allow 45.95.169.104;
 allow 45.95.169.109;
@@ -1746,6 +1743,9 @@ allow 72.235.129.116;
 allow 72.5.43.62;
 allow 74.82.47.194;
 allow 77.246.98.159;
+allow 77.48.28.204;
+allow 77.48.28.237;
+allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
 allow 80.241.60.207;
@@ -1785,7 +1785,6 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
-allow 87.120.254.132;
 allow 88.151.194.24;
 allow 88.80.20.86;
 allow 88.80.26.2;
@@ -1832,6 +1831,8 @@ allow 93.95.228.125;
 allow 93.95.231.118;
 allow 93.95.231.14;
 allow 93.95.231.88;
+allow 93.99.104.194;
+allow 93.99.104.40;
 allow 94.102.51.15;
 allow 94.142.241.194;
 allow 94.142.244.16;
