--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -49,6 +49,7 @@ allow 107.174.146.25;
 allow 107.189.1.175;
 allow 107.189.12.7;
 allow 107.189.12.88;
+allow 107.189.13.180;
 allow 107.189.13.251;
 allow 107.189.13.254;
 allow 107.189.13.91;
@@ -91,7 +92,6 @@ allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.172.205.8;
 allow 114.35.245.150;
-allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
 allow 121.78.28.166;
@@ -257,7 +257,6 @@ allow 185.129.61.9;
 allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.47.58;
-allow 185.132.53.6;
 allow 185.14.31.113;
 allow 185.150.28.13;
 allow 185.154.110.142;
@@ -564,7 +563,7 @@ allow 195.47.238.92;
 allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
-allow 198.167.206.209;
+allow 198.167.206.157;
 allow 198.46.166.157;
 allow 198.50.212.160;
 allow 198.58.107.53;
@@ -693,7 +692,6 @@ allow 2001:67c:e60:c0c:192:42:116:217;
 allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:b011:4006:545c::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1127,6 +1125,7 @@ allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1143,6 +1142,7 @@ allow 2a00:c70:1:185:246:84:179:1;
 allow 2a00:fbe4:1ab:ffff::133;
 allow 2a01:270:9847::1;
 allow 2a01:5e0:36:c311::1;
+allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
@@ -1478,6 +1478,7 @@ allow 2a12:a800:2:1:185:241:208:82;
 allow 2a12:a800:2:1:185:241:208:92;
 allow 2a12:a800:2:1:45:138:16:107;
 allow 2a12:a800:2:1:45:138:16:113;
+allow 2a12:a800:2:1:45:138:16:164;
 allow 2a12:a800:2:1:45:138:16:222;
 allow 2a12:a800:2:1:45:138:16:230;
 allow 2a12:a800:2:1:45:138:16:231;
@@ -1566,6 +1567,7 @@ allow 45.137.70.158;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.161;
+allow 45.138.16.164;
 allow 45.138.16.222;
 allow 45.138.16.230;
 allow 45.138.16.231;
@@ -1661,6 +1663,7 @@ allow 45.9.148.50;
 allow 45.9.156.101;
 allow 45.9.168.18;
 allow 45.9.168.192;
+allow 45.9.168.70;
 allow 45.94.31.68;
 allow 45.95.169.104;
 allow 45.95.169.109;
@@ -1784,6 +1787,7 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
+allow 87.120.254.132;
 allow 88.151.194.24;
 allow 88.80.20.86;
 allow 88.80.26.2;
@@ -1797,6 +1801,7 @@ allow 89.147.110.82;
 allow 89.147.111.87;
 allow 89.234.157.254;
 allow 89.32.41.150;
+allow 89.37.95.34;
 allow 89.58.26.216;
 allow 89.58.41.156;
 allow 91.132.144.59;
@@ -1830,6 +1835,8 @@ allow 93.95.228.125;
 allow 93.95.231.118;
 allow 93.95.231.14;
 allow 93.95.231.88;
+allow 93.99.104.128;
+allow 93.99.104.18;
 allow 93.99.104.194;
 allow 93.99.104.40;
 allow 94.102.51.15;
