Update lists at 20250723-0001

--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -138,7 +138,6 @@ set_real_ip_from 158.174.210.51;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 161.129.68.162;
 set_real_ip_from 162.210.173.17;
-set_real_ip_from 162.210.173.3;
 set_real_ip_from 162.210.173.5;
 set_real_ip_from 162.210.173.6;
 set_real_ip_from 162.216.18.62;
@@ -158,6 +157,8 @@ set_real_ip_from 171.25.193.35;
 set_real_ip_from 171.25.193.36;
 set_real_ip_from 171.25.193.37;
 set_real_ip_from 171.25.193.38;
+set_real_ip_from 171.25.193.39;
+set_real_ip_from 171.25.193.40;
 set_real_ip_from 171.25.193.77;
 set_real_ip_from 171.25.193.78;
 set_real_ip_from 171.25.193.79;
@@ -251,6 +252,7 @@ set_real_ip_from 185.129.61.8;
 set_real_ip_from 185.129.61.9;
 set_real_ip_from 185.129.62.62;
 set_real_ip_from 185.129.62.63;
+set_real_ip_from 185.130.47.58;
 set_real_ip_from 185.14.31.113;
 set_real_ip_from 185.150.28.13;
 set_real_ip_from 185.154.110.142;
@@ -616,6 +618,8 @@ set_real_ip_from 2001:67c:289c:2::35;
 set_real_ip_from 2001:67c:289c:2::36;
 set_real_ip_from 2001:67c:289c:2::37;
 set_real_ip_from 2001:67c:289c:2::38;
+set_real_ip_from 2001:67c:289c:2::39;
+set_real_ip_from 2001:67c:289c:2::40;
 set_real_ip_from 2001:67c:289c::25;
 set_real_ip_from 2001:67c:289c:4::131;
 set_real_ip_from 2001:67c:289c:4::77;
@@ -1236,6 +1240,7 @@ set_real_ip_from 2a06:d380:0:103::62;
 set_real_ip_from 2a06:d380:0:103::63;
 set_real_ip_from 2a06:e80:3000:1:bad:babe:ca11:911;
 set_real_ip_from 2a07:6d80:1e01:3a13::;
+set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a07:e042:1:181::1;
 set_real_ip_from 2a07:e042:1:182::1;
 set_real_ip_from 2a09:61c0::20;
@@ -1420,7 +1425,6 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b02b:1337:3;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b03b:1337:4;
-set_real_ip_from 2a0e:97c0:3e3:460:1337:b04b:1337:5;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b05b:1337:6;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b20b:1337:9;
@@ -1502,7 +1506,6 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:200;
 set_real_ip_from 2a12:a800:2:1:45:141:215:21;
 set_real_ip_from 2a12:a800:2:1:45:141:215:28;
 set_real_ip_from 2a12:a800:2:1:45:141:215:40;
-set_real_ip_from 2a12:a800:2:1:45:141:215:56;
 set_real_ip_from 2a12:a800:2:1:45:141:215:61;
 set_real_ip_from 2a12:a800:2:1:45:141:215:62;
 set_real_ip_from 2a12:a800:2:1:45:141:215:63;
@@ -1563,7 +1566,6 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.13.225.69;
-set_real_ip_from 45.13.225.78;
 set_real_ip_from 45.133.74.53;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.70.158;
@@ -1591,7 +1593,6 @@ set_real_ip_from 45.141.215.200;
 set_real_ip_from 45.141.215.21;
 set_real_ip_from 45.141.215.28;
 set_real_ip_from 45.141.215.40;
-set_real_ip_from 45.141.215.56;
 set_real_ip_from 45.141.215.61;
 set_real_ip_from 45.141.215.62;
 set_real_ip_from 45.141.215.63;
