--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -53,7 +53,6 @@ allow 107.189.13.251;
 allow 107.189.13.254;
 allow 107.189.13.91;
 allow 107.189.14.43;
-allow 107.189.2.108;
 allow 107.189.29.184;
 allow 107.189.30.49;
 allow 107.189.30.69;
@@ -192,12 +191,12 @@ allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
 allow 177.153.51.238;
+allow 177.93.140.66;
 allow 178.162.175.5;
 allow 178.17.170.144;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
-allow 178.17.174.164;
 allow 178.175.148.209;
 allow 178.175.148.236;
 allow 178.175.148.246;
@@ -878,6 +877,7 @@ allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
 allow 23.151.8.8;
+allow 23.155.8.104;
 allow 23.184.48.13;
 allow 23.184.48.78;
 allow 23.191.200.10;
@@ -936,6 +936,7 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
+allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
@@ -1126,6 +1127,7 @@ allow 2620:7:6001::ffff:c759:e659;
 allow 2620:95:4007::111;
 allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
+allow 2803:6d90:111::67;
 allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
@@ -1138,7 +1140,6 @@ allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:68::1;
-allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:4d80::1;
 allow 2a00:74a0:e000:1003::114;
@@ -1204,7 +1205,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1432,6 +1432,7 @@ allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
+allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1690,7 +1691,6 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1806,7 +1806,6 @@ allow 89.147.110.82;
 allow 89.147.111.87;
 allow 89.234.157.254;
 allow 89.32.41.150;
-allow 89.37.95.34;
 allow 89.58.26.216;
 allow 89.58.41.156;
 allow 91.132.144.59;
@@ -1834,6 +1833,7 @@ allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
 allow 93.88.75.35;
+allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
