Update lists at 20250723-1800

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -440,6 +440,7 @@ deny 2a09:61c0::20;
 deny 2a09:61c0::21;
 deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
+deny 2a0a:20c0:dc01:3::7f89;
 deny 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:f4c0:16c:10::1;
@@ -618,7 +619,6 @@ deny 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 deny 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 deny 2a0e:97c0:3e3:460:1337:b02b:1337:3;
 deny 2a0e:97c0:3e3:460:1337:b03b:1337:4;
-deny 2a0e:97c0:3e3:460:1337:b04b:1337:5;
 deny 2a0e:97c0:3e3:460:1337:b05b:1337:6;
 deny 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 deny 2a0e:97c0:3e3:460:1337:b20b:1337:9;
