--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -265,6 +265,7 @@ set_real_ip_from 185.183.159.40;
 set_real_ip_from 185.183.192.147;
 set_real_ip_from 185.191.204.254;
 set_real_ip_from 185.191.239.172;
+set_real_ip_from 185.191.239.49;
 set_real_ip_from 185.193.52.180;
 set_real_ip_from 185.195.71.244;
 set_real_ip_from 185.207.107.130;
@@ -558,7 +559,7 @@ set_real_ip_from 195.47.238.92;
 set_real_ip_from 195.47.238.93;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
-set_real_ip_from 198.167.206.169;
+set_real_ip_from 198.167.206.221;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -1248,6 +1249,7 @@ set_real_ip_from 2a09:61c0::20;
 set_real_ip_from 2a09:61c0::21;
 set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
+set_real_ip_from 2a0a:20c0:dc01:3::7f89;
 set_real_ip_from 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
@@ -1426,7 +1428,6 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b02b:1337:3;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b03b:1337:4;
-set_real_ip_from 2a0e:97c0:3e3:460:1337:b04b:1337:5;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b05b:1337:6;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b20b:1337:9;
@@ -1567,12 +1568,12 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.13.225.69;
-set_real_ip_from 45.13.225.78;
 set_real_ip_from 45.133.74.53;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.70.158;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
+set_real_ip_from 45.138.16.161;
 set_real_ip_from 45.138.16.164;
 set_real_ip_from 45.138.16.222;
 set_real_ip_from 45.138.16.230;
@@ -1676,6 +1677,7 @@ set_real_ip_from 46.165.243.36;
 set_real_ip_from 46.23.109.25;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
+set_real_ip_from 46.246.92.34;
 set_real_ip_from 46.250.243.29;
 set_real_ip_from 46.253.4.208;
 set_real_ip_from 46.38.243.210;
