Update lists at 20250724-0301

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -51,11 +51,9 @@ allow 107.189.1.228;
 allow 107.189.12.7;
 allow 107.189.12.88;
 allow 107.189.13.180;
-allow 107.189.13.251;
 allow 107.189.13.254;
 allow 107.189.13.91;
 allow 107.189.14.43;
-allow 107.189.2.108;
 allow 107.189.29.103;
 allow 107.189.29.184;
 allow 107.189.30.49;
@@ -189,7 +187,6 @@ allow 176.58.89.182;
 allow 176.65.148.133;
 allow 176.65.148.3;
 allow 176.65.149.100;
-allow 176.65.149.84;
 allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
@@ -547,7 +544,6 @@ allow 195.176.3.24;
 allow 195.47.238.176;
 allow 195.47.238.177;
 allow 195.47.238.178;
-allow 195.47.238.44;
 allow 195.47.238.82;
 allow 195.47.238.83;
 allow 195.47.238.84;
@@ -562,6 +558,10 @@ allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.167.206.221;
+allow 198.251.84.163;
+allow 198.251.84.237;
+allow 198.251.88.18;
+allow 198.251.89.96;
 allow 198.46.166.157;
 allow 198.50.212.160;
 allow 198.58.107.53;
@@ -902,6 +902,7 @@ allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
+allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
@@ -909,7 +910,6 @@ allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
-allow 23.236.122.193;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
 allow 2400:8905::f03c:95ff:fe67:ec03;
@@ -974,7 +974,18 @@ allow 2605:6400:20:c26:5163:253e:1ef6:d896;
 allow 2605:6400:20:ff9::1;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
+allow 2605:6400:30:f174::;
+allow 2605:6400:30:f174:1:1:1:1;
+allow 2605:6400:30:f174:1111:2222:3333:4444;
+allow 2605:6400:30:f174:1:2:3:4;
+allow 2605:6400:30:f174::42;
+allow 2605:6400:30:f174:42:42::;
+allow 2605:6400:30:f174:42:42:42:0;
+allow 2605:6400:30:f174:42:42:42:42;
+allow 2605:6400:30:f174:4:3:2:1;
+allow 2605:6400:30:f174:cafe::;
 allow 2605:6400:30:f414:bf7c:cd6f:39bc:c682;
+allow 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:40:fe09::2;
@@ -1199,6 +1210,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1217,7 +1229,6 @@ allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
-allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
@@ -1375,7 +1386,6 @@ allow 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 allow 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 allow 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
-allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
@@ -1425,7 +1435,6 @@ allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
-allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1688,6 +1697,7 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1790,7 +1800,6 @@ allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.254.132;
 allow 88.151.194.24;
-allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
@@ -1829,7 +1838,6 @@ allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
 allow 93.88.75.35;
-allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
