--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -169,7 +169,18 @@ allow 2605:6400:20:c26:5163:253e:1ef6:d896;
 allow 2605:6400:20:ff9::1;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
+allow 2605:6400:30:f174::;
+allow 2605:6400:30:f174:1:1:1:1;
+allow 2605:6400:30:f174:1111:2222:3333:4444;
+allow 2605:6400:30:f174:1:2:3:4;
+allow 2605:6400:30:f174::42;
+allow 2605:6400:30:f174:42:42::;
+allow 2605:6400:30:f174:42:42:42:0;
+allow 2605:6400:30:f174:42:42:42:42;
+allow 2605:6400:30:f174:4:3:2:1;
+allow 2605:6400:30:f174:cafe::;
 allow 2605:6400:30:f414:bf7c:cd6f:39bc:c682;
+allow 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:40:fe09::2;
@@ -393,6 +404,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -411,7 +423,6 @@ allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
-allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
@@ -569,7 +580,6 @@ allow 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 allow 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 allow 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
-allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
@@ -619,7 +629,6 @@ allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
-allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
