--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -54,6 +54,7 @@ allow 107.189.13.180;
 allow 107.189.13.254;
 allow 107.189.13.91;
 allow 107.189.14.43;
+allow 107.189.2.108;
 allow 107.189.29.103;
 allow 107.189.29.184;
 allow 107.189.30.49;
@@ -187,6 +188,7 @@ allow 176.58.89.182;
 allow 176.65.148.133;
 allow 176.65.148.3;
 allow 176.65.149.100;
+allow 176.65.149.84;
 allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
@@ -401,7 +403,6 @@ allow 185.233.100.23;
 allow 185.235.146.29;
 allow 185.241.208.115;
 allow 185.241.208.185;
-allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
 allow 185.241.208.54;
@@ -910,6 +911,7 @@ allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
+allow 23.236.122.193;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
 allow 2400:8905::f03c:95ff:fe67:ec03;
@@ -1229,6 +1231,7 @@ allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
+allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
@@ -1435,6 +1438,7 @@ allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
+allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1477,7 +1481,6 @@ allow 2a12:a800:1:1:2:58:56:93;
 allow 2a12:a800:1:1:45:154:98:33;
 allow 2a12:a800:2:1:185:241:208:115;
 allow 2a12:a800:2:1:185:241:208:185;
-allow 2a12:a800:2:1:185:241:208:202;
 allow 2a12:a800:2:1:185:241:208:204;
 allow 2a12:a800:2:1:185:241:208:206;
 allow 2a12:a800:2:1:185:241:208:71;
@@ -1576,7 +1579,6 @@ allow 45.134.225.36;
 allow 45.137.70.158;
 allow 45.138.16.107;
 allow 45.138.16.113;
-allow 45.138.16.161;
 allow 45.138.16.164;
 allow 45.138.16.222;
 allow 45.138.16.230;
@@ -1838,6 +1840,7 @@ allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
 allow 93.88.75.35;
+allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
