Update lists at 20250724-1201

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -338,7 +338,6 @@ deny 2a00:1dc0:caff:12c::4d3a;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
-deny 2a00:1dc0:caff:68::1;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:4d80::1;
 deny 2a00:74a0:e000:1003::114;
@@ -673,6 +672,7 @@ deny 2a12:a800:1:1:2:58:56:93;
 deny 2a12:a800:1:1:45:154:98:33;
 deny 2a12:a800:2:1:185:241:208:115;
 deny 2a12:a800:2:1:185:241:208:185;
+deny 2a12:a800:2:1:185:241:208:202;
 deny 2a12:a800:2:1:185:241:208:204;
 deny 2a12:a800:2:1:185:241:208:206;
 deny 2a12:a800:2:1:185:241:208:71;
