--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -201,7 +201,6 @@ allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
 allow 178.175.148.209;
-allow 178.175.148.236;
 allow 178.175.148.246;
 allow 178.20.55.16;
 allow 178.20.55.182;
@@ -403,6 +402,7 @@ allow 185.233.100.23;
 allow 185.235.146.29;
 allow 185.241.208.115;
 allow 185.241.208.185;
+allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
 allow 185.241.208.54;
@@ -900,6 +900,7 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
+allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
@@ -1144,7 +1145,6 @@ allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
-allow 2a00:1dc0:caff:68::1;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:4d80::1;
 allow 2a00:74a0:e000:1003::114;
@@ -1479,6 +1479,7 @@ allow 2a12:a800:1:1:2:58:56:93;
 allow 2a12:a800:1:1:45:154:98:33;
 allow 2a12:a800:2:1:185:241:208:115;
 allow 2a12:a800:2:1:185:241:208:185;
+allow 2a12:a800:2:1:185:241:208:202;
 allow 2a12:a800:2:1:185:241:208:204;
 allow 2a12:a800:2:1:185:241:208:206;
 allow 2a12:a800:2:1:185:241:208:71;
